--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "stockwatch",
   "version": "0.0.1",
   "description": "",
-  "main": "index.js",
+  "main": "src/client/index.tsx",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "concurrently \"cross-env NODE_ENV=development webpack serve\" \"cross-env NODE_ENV=development nodemon src/server/server.ts\"",
-    "build": "NODE_ENV=production webpack"
+    "build": "NODE_ENV=development webpack",
+    "dev": "concurrently \"cross-env NODE_ENV=development webpack serve --hot\" \"cross-env NODE_ENV=development nodemon src/server/server.ts\""
   },
   "repository": {
     "type": "git",
@@ -19,37 +19,19 @@
   },
   "homepage": "https://github.com/ResearchGlobal/stockwatch#readme",
   "dependencies": {
-    "@babel/core": "^7.13.15",
-    "@babel/plugin-transform-runtime": "^7.13.15",
-    "@babel/preset-env": "^7.13.15",
-    "@babel/preset-react": "^7.13.13",
-    "@babel/preset-typescript": "^7.15.0",
     "@babel/runtime": "^7.13.17",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
     "@types/express": "^4.17.11",
-    "@types/jest": "^27.0.1",
-    "@types/react": "^17.0.5",
-    "@types/react-dom": "^17.0.5",
-    "@typescript-eslint/eslint-plugin": "^4.30.0",
-    "@typescript-eslint/parser": "^4.30.0",
     "axios": "^0.21.1",
-    "babel-loader": "^8.2.2",
     "browserify": "^17.0.0",
-    "concurrently": "^6.2.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
-    "cross-env": "^7.0.3",
     "css-loader": "^5.2.4",
     "dotenv": "^9.0.1",
-    "eslint": "^7.32.0",
-    "eslint-plugin-jest-dom": "^3.9.0",
-    "eslint-plugin-testing-library": "^4.12.0",
     "express": "^4.17.1",
+    "html-webpack-plugin": "^5.3.2",
     "js-cookie": "^3.0.0",
     "msw": "^0.35.0",
-    "nodemon": "^2.0.7",
     "path-browserify": "^1.0.1",
     "pg": "^8.7.1",
     "prop-types": "^15.7.2",
@@ -58,15 +40,39 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "request": "^2.88.2",
+    "style-loader": "^2.0.0",
+    "ts-node": "^10.0.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.13.15",
+    "@babel/plugin-transform-runtime": "^7.13.15",
+    "@babel/preset-env": "^7.13.15",
+    "@babel/preset-react": "^7.13.13",
+    "@babel/preset-typescript": "^7.15.0",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.0.0",
+    "@types/jest": "^27.0.1",
+    "@types/react": "^17.0.5",
+    "@types/react-dom": "^17.0.5",
+    "@types/webpack-env": "^1.16.2",
+    "@typescript-eslint/eslint-plugin": "^4.30.0",
+    "@typescript-eslint/parser": "^4.30.0",
+    "babel-loader": "^8.2.2",
+    "concurrently": "^6.2.0",
+    "cross-env": "^7.0.3",
+    "eslint": "^7.32.0",
+    "eslint-plugin-jest-dom": "^3.9.0",
+    "eslint-plugin-testing-library": "^4.12.0",
+    "jes": "^0.6.1",
+    "nodemon": "^2.0.7",
+    "react-hot-loader": "^4.13.0",
     "sass": "^1.32.11",
     "sass-loader": "^11.0.1",
     "source-map-loader": "^2.0.1",
-    "style-loader": "^2.0.0",
     "ts-loader": "^9.1.2",
-    "ts-node": "^10.0.0",
     "typescript": "^4.2.4",
-    "webpack": "^5.38.1",
-    "webpack-cli": "^4.7.2",
+    "webpack": "^5.52.0",
+    "webpack-cli": "^4.8.0",
     "webpack-dev-server": "^4.1.1"
   }
 }
