--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/ResearchGlobal/stockwatch#readme",
   "dependencies": {
     "@babel/runtime": "^7.13.17",
+    "@material-ui/core": "^4.12.3",
     "@testing-library/user-event": "^13.2.1",
     "@types/express": "^4.17.11",
     "axios": "^0.21.1",
