--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/client/index.tsx",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "NODE_ENV=test jest --verbose ",
     "build": "NODE_ENV=development webpack",
     "dev": "concurrently \"cross-env NODE_ENV=development webpack serve --hot\" \"cross-env NODE_ENV=development nodemon src/server/server.ts\""
   },
@@ -21,7 +21,6 @@
   "dependencies": {
     "@babel/runtime": "^7.13.17",
     "@material-ui/core": "^4.12.3",
-    "@testing-library/user-event": "^13.2.1",
     "@types/express": "^4.17.11",
     "axios": "^0.21.1",
     "browserify": "^17.0.0",
@@ -51,6 +50,7 @@
     "@babel/preset-react": "^7.13.13",
     "@babel/preset-typescript": "^7.15.0",
     "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/user-event": "^13.2.1",
     "@testing-library/react": "^12.0.0",
     "@types/jest": "^27.0.1",
     "@types/react": "^17.0.5",
@@ -70,6 +70,7 @@
     "sass": "^1.32.11",
     "sass-loader": "^11.0.1",
     "source-map-loader": "^2.0.1",
+    "supertest": "^6.1.6",
     "ts-loader": "^9.1.2",
     "typescript": "^4.2.4",
     "webpack": "^5.52.0",
